--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -35,3 +35,5 @@ $photo:url(../img/wangch-photo-color-w@2x.png);
 .color-example {
     background-color: var(--maincolor, $maincolor);
 }
+
+$marginSpace : 25px;
